ncc/testsuite/negative/lexer.n
using Nemerle.IO;

/*    */ #define AA  // E: preprocessor directives must occur only in lines beginning with whitespaces

#line                       // E: expecting line

module M {
  Main () : void { 
     printf ("foo \g"); // E: bad escape character
     def x = 4444444444444444444444444444444444444; // E: number literal
  }
  foo () : void {
    _ = 0x   // E: expected value letters in numeric literal
  }
}

}  // E: unexpected closing bracket

kjlk